
<resources>
    <string name="app_name">CalculadoraIMC</string>
    <string name="tituloApp">Calculadora IMC</string>
    <string name="textNome">Digite seu nome:</string>
    <string name="editNome">Nome</string>
    <string name="textAltura">Digite sua altura:</string>
    <string name="editAltura">Altura</string>
    <string name="textPeso">Digite seu peso:</string>
    <string name="editPeso">Peso</string>
    <string name="btnCalcular">CALCULAR IMC</string>
    <string name="btnLimpar">LIMPAR</string>
    <string name="imc">IMC</string>
    <string name="btnTabela">Tabela IMC</string>
    <string name="tbIMC">Tabela IMC</string>
    <string name="saudacao">Olá</string>
    <string name="resultIMC">Seu IMC é</string>
    <string name="abaixoPeso">você está abaixo do peso.</string>
    <string name="pesoNormal">você está com peso normal.</string>
    <string name="sobrepeso">você está um pouco acima do peso normal.</string>
    <string name="obesidade1">você está com obesidade grau I.</string>
    <string name="obesidade2">você está com obesidade grau II.</string>
    <string name="obesidade3">você está com obesidade mórbida.</string>
</resources>
